# ecomm-microservices

./: .dockerignore  .env  .gitignore  buf-command.md  buf.gen.go.yaml  buf.gen.rust.yaml  docker-compose.yml  ecommerce-directory-structure.html  ecommerce-microservices-arch.html  readme.md  run_protoc.sh  schema-overview.html  taskfile.yml
api-gateway/: .env  Dockerfile  go.mod  go.sum  gqlgen.yml  main.go  swagger.yaml  tools.go
api-gateway/internal/client/: product_client.go  user_client.go
api-gateway/internal/config/: config.go
api-gateway/internal/graphql/: mutation.graphql  product.graphql  query.graphql  schema.graphql  server.go  user.graphql
api-gateway/internal/handler/: admin_handler.go  auth_handler.go  health_handler.go  product_handler.go  user_handler.go
api-gateway/internal/middleware/: auth.go  cors.go  logger.go  rbac.go
proto/: buf.gen.yaml
proto/payment/: payment.proto
proto/user/: user.proto
services/payment-service/: .env  Cargo.toml
services/payment-service/db/migrations/: 000001_create-payment-methods-table.down.sql  000001_create-payment-methods-table.up.sql  000002_payments.down.sql  000002_payments.up.sql  000003_payment-attempts.down.sql  000003_payment-attempts.up.sql  000004_refunds.down.sql  000004_refunds.up.sql  000005_payment_webhook_logs.down.sql  000005_payment_webhook_logs.up.sql
services/payment-service/src/: config.rs  db.rs  grpc.rs  main.rs  proto.rs
services/product-service/: .env  Dockerfile  go.mod  go.sum  main.go
services/user-service/: .env  Dockerfile  go.mod  go.sum  main.go
(+87 files in other folders)
