[package]
name = "payment-service"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "payment-service"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# gRPC / protobuf
tonic = "0.14"
tonic-prost = "0.14"
prost = "0.14"
tonic-reflection = "0.14"

# Postgres (async)
tokio-postgres = { version = "0.7", features = ["with-uuid-1", "with-time-0_3"] }
deadpool-postgres = { version = "0.14", features = ["serde"] }
postgres-types = { version = "0.2", features = ["derive", "with-uuid-1", "with-time-0_3"] }

# UUID
uuid = { version = "1", features = ["v4", "v7", "serde"] }

# Time
time = { version = "0.3", features = ["macros"] }

# Env / config
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"

[build-dependencies]
# No build.rs needed — we use pre-generated code from gen/rust/
